--- a/02sideProjectPersonalPortfolio/src/App.css
+++ b/02sideProjectPersonalPortfolio/src/App.css
@@ -1,3 +1,13 @@
+input, textarea {
+    background: inherit;
+    border: 1px solid black;
+    height: 3rem;
+}
+
+#n *:hover, #n *:focus {
+    color: rgb(157, 134, 4);
+}
+
 @media (max-width: 768px) {
     #n {
         display: none;
